@@ -1,2 +1,3 @@
 [B]Version 1.1.131[/B]
 - naked.com - fix listing
+- chaturbate - fix online model search
